// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/08/2010
	r95 [pakpil]
	* Added Shadow Chaser's skills: SC_REPRODUCE, SC_BLOODYLUST.
	* Minor fix in RK_GIANTGROWTH.
	* Added two packets: 
	- clif_addskill to add a skill to the skill info window
	- clif_skillinfo_delete to remove a skill frome the skill info window.

01/08/2010
	r94 [pakpil]
	* Added some Shadow Chaser's skills: SC_BODYPAINT, SC_INVISIBILITY, SC_DEADLYINFECT, SC_ENERVATION, SC_GROOMY,
	  SC_IGNORANCE, SC_LAZINESS, SC_UNLUCKY, SC_WEAKNESS, SC_STRIPACCESSARY, SC_MANHOLE, SC_SIMENSIONDOOR and SC_CHAOSPANIC.

12/29/2009
	r85 [pakpil]
	* Added SC_STRIPACCESSARY.
	* Minor fix in SC_SHADOWFORM.
	* Minor fix in my last commmit.

	r84 [pakpil]
	* Fixed the skillup control from my last commit. Sorry.
	* Added the new clif_skillcasting packet with the info recompilled from RE server.

12/28/2009
	r83 [Jobbie]
	* Merge eAthena Updates upto r14215

	r82 [pakpil]
	* Added the new official skillup control. Seems to be working as intended.
	- Added new packet 0x7e2 that shows a message from msgstringtable.txt and pass an integer as value.
		[NOTE: Take care with this packet, if you select a message with %s instead %d clients'll crash.]
	- Added new function to send packet 0x291 that shows a message from msgstringtable.txt.
	- Fixed all functions that use packet 0x291.

12/26/2009
	r78 [Jobbie]
	* Added and Confirmed some official UNT_* of new skills.
	* Added and Updated some SI_*'s that is used by skills and named it to its official value name.
	* Updated some skills to use its official SI's.
	* Fixed Comet to use 0x1de packet to display its effect rather than to use special effect.
	* Fixed White Imprison.
	- When status is active you cannot use items or skills.
    	- Cannot target non-enemy unit.

12/24/2009
	r74 [pakpil]
	* First implementation of SC_SHADOWFORM skill.

12/24/2009
	r73 [Jobbie]